# kittens-crew

./: .gitignore  AGENTS.md  FORMAT.md  NEXT.md  README.md  SPEC.md  install.sh  plugin.json
.kittenscrew/: spec.toml
archive/: AGENTS.original.md  AGENTS.original.original.md  CAST.md
archive/commands/: check-all.md  check.md  install.md
benchmarks/: README.md  bench.ts  compression.ts  package.json  tok.ts
benchmarks/agency/: .env.example  Dockerfile  README.md  arms.json  harness.py  judge.py  report.py  rubric.md  scenario.json  tmux_driver.py
benchmarks/agentic/: chart.ts  config.json  run.ts
ccr/: Dockerfile  README.md  config.example.json  docker-compose.yml  entrypoint.sh  failover.js  gen-config.sh
commands/: build.md  check-changed.md  check.md  debt.md  help.md  init.md  install.md  plan.md  spec.md
docs/: orchestrator.md  rig-ecosystem.md
hooks/: hooks.json
kittenscrew/: Cargo.toml
kittenscrew/hooks/: post-tool.sh  pre-compact.sh  pre-tool.sh  session-start.sh
kittenscrew/src/: board.rs  check.rs  cli.rs  commands.rs  compression.rs  config.rs  council.rs  docs.rs  drift.rs  driver.rs  error.rs  gate.rs  hook.rs  init.rs  intake.rs  kitty.rs  main.rs  plan.rs  score.rs  spec.rs  squeez.rs  store.rs
kittenscrew/src/driver/: api.rs  bench.rs  budget.rs  checkpoint.rs  cycle.rs  delegation.rs  doomloop.rs  drive.rs  estimate.rs  evaldump.rs  events.rs  intervene.rs  karma.rs  karma_sim.rs  mod.rs  modelpick.rs  queue.rs  response.rs  scenario.rs  sim.rs  snapshot.rs  status.rs  tripwire.rs  verify.rs
kittenscrew/tests/: cli.rs
(+38 files in other folders)
